Expand berry smoothie recipe, create imgages file, add smoothie image

--- a/recipes/berrysmoothie.html
+++ b/recipes/berrysmoothie.html
@@ -5,6 +5,42 @@
 		<title>Recipe – Berry Smoothie</title>
 	</head>
 	<body>
-		<h1>Berry Smoothie</h1>
+		<h1>Kelsey's Best  Berry Smoothie</h1>
+		<img src="../img/smoothie.jpg">
+		<h2>Description</h2>
+		<p>A refreshing smoothie bursting with berry flavor! Avocado 
+adds some potassium, Greek yogurt brings some protein, and crushed ginger and 
+fresh mint leaves add a bit of zip. Excellent for hot afternoons. Bonus points 
+for snagging mint leaves from your own herb garden.</p>
+		<h2>Ingredients</h2>
+		<ul>
+			<li>1.25 cups frozen strawberries</li>
+			<li>0.75 cups frozen raspberries</li>
+			<li>0.33 cups frozen avocado chunks</li>
+			<li>0.5 cups 2% plain Greek yogurt (or yogurt of 
+choice)</li>
+			<li>0.5 cups 2% lactose-free milk (or milk substitute 
+of choice)</li>
+			<li>Generous drizzle of honey</li>
+			<li>Dash of vanilla extract</li>
+			<li>1 tsp crushed ginger (I prefer the pre-portioned 
+frozen cubes from Trader Joe's freezer section)</li>
+			<li>4 fresh mint leaves, rinsed</li>
+		</ul>
+		<h2>Steps</h2>
+		<ol>
+			<li>Add frozen fruits, ginger and mint leaves to 
+blender cup.</li>
+			<li>Drizzle honey over fruit in cup and tip in a dash 
+of vanilla extract.</li>
+			<li>Measure out yogurt and add to the blender cup. Then 
+use the same measuring cup to measure out the milk and add to the blender cup 
+(this will help get out any yogurt still sticking to the measuring cup and 
+blender cup sides).</li>
+			<li>Blend using blender's Extract setting (or 
+equivalent). If there are still solid pieces of fruit after the cycle runs, run 
+it a second time.</li>
+			<li>Enjoy!</li>
+		</ol>
 	</body>
 </html>
