Add pumpkin smoothie page with recipe and image, update alt text and index

--- a/recipes/berrysmoothie.html
+++ b/recipes/berrysmoothie.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1>Kelsey's Best  Berry Smoothie</h1>
-		<img src="../img/smoothie.jpg">
+		<img src="../img/smoothie.jpg" alt="berries and smoothie">
 		<h2>Description</h2>
 		<p>A refreshing smoothie bursting with berry flavor! Avocado 
 adds some potassium, Greek yogurt brings some protein, and crushed ginger and 
