--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 	</head>
 	<body>
 		<h1>Odin Recipes</h1>
-		<a href="./recipes/berrysmoothie.html">Berry Smoothie</a>
+		<ul>
+			<li><a href="./recipes/berrysmoothie.html">Berry 
+Smoothie</a></li>
+			<li><a href="./recipes/pumpkinsmoothie.html">Pumpkin 
+Smoothie</a></li>
+			<li><a href=" ">Text</a></li>
+		</ul>
 	</body>
 </html>
