Add page for Mint Hibiscus Lemonade recipe, update link on main page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 Smoothie</a></li>
 			<li><a href="./recipes/pumpkinsmoothie.html">Pumpkin 
 Smoothie</a></li>
-			<li><a href=" ">Text</a></li>
+			<li><a href="./recipes/minthibiscuslemonade.html">Mint 
+Hibiscus Lemonade</a></li>
 		</ul>
 	</body>
 </html>
