Fix closing tag in lemonade ingredients list item

--- a/recipes/minthibiscuslemonade.html
+++ b/recipes/minthibiscuslemonade.html
@@ -20,7 +20,7 @@ also be fine.) Now I just need to track down a lemon tree...</p>
 leaves for garnish)</li>
 				<li>8 cups water, divided</li>
 				<li>1 cup fresh-squeezed lemon juice</li>
-				<li>1.5 cups granulated sugar<li>
+				<li>1.5 cups granulated sugar</li>
 			</ul>
 		<h2>Directions</h2>
 			<ol>
