--- a/recipes/berrysmoothie.html
+++ b/recipes/berrysmoothie.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Recipe – Berry Smoothie</title>
+		<link rel="stylesheet" href="../style.css">
 	</head>
 	<body>
 		<h1>Kelsey's Best  Berry Smoothie</h1>
