--- a/recipes/pumpkinsmoothie.html
+++ b/recipes/pumpkinsmoothie.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Recipe – Pumpkin Smoothie</title>
+			<link rel="stylesheet" href="../style.css">
 	</head>
 	<body>
 		<h1>Pumpkin Smoothie</h1>
