--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<h1>Odin Recipes</h1>
-		<ul class="mainpage">
+		<ul class="index">
 			<li><a href="./recipes/berrysmoothie.html">Berry 
 Smoothie</a></li>
 			<li><a href="./recipes/pumpkinsmoothie.html">Pumpkin 
